--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
